--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nure's games!</title>
 </head>
 <body>
-    
+    <h1>Presenting... Nure's games!</h1>
+    <p>This is a block of all my best games, from scratch to c++. I wish for you to enjoy them!</p>
 </body>
 </html>
