added Connect four's introduction

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nure's games!</title>
 </head>
+
 <body>
     <h1>Presenting... Nure's games!</h1>
     <p>This is a block of all my best games, from scratch to c++. I wish for you to enjoy them!</p>
+    <h2>Connect four</h2>
+    <p>Connect four is a two player game in wich your objetive is to make a four spaces line, vertical, </p>
+    <img src="" alt="Connect four being played">
 </body>
+
 </html>
