--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>This is a block of all my best games, from scratch to c++. I wish for you to enjoy them!</p>
     <h2>Connect four</h2>
     <p>Connect four is a two player game in wich your objetive is to make a four spaces line, vertical, </p>
-    <img src="" alt="Connect four being played">
+    <img src="assets\images\Captura.PNG" alt="Connect four being played">
 </body>
 
 </html>
