--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
 </head>
 
 <body>
-    <h1>Presenting... Nure's games!</h1>
-    <p>This is a block of all my best games, from scratch to c++. I wish for you to enjoy them!</p>
-    <h2>Connect four</h2>
-    <p>Connect four is a two player game in wich your objetive is to make a four spaces line, vertical, </p>
-    <img src="assets\images\Captura.PNG" alt="Connect four being played">
+    <main>
+        <section>
+            <h1>Presenting... Nure's games!</h1>
+            <p>This is a block of all my best games, from scratch to c++. I wish for you to enjoy them!</p>
+        </section>
+        <section>
+            <h2>Connect four</h2>
+            <p>Connect four is a two player game in wich your objetive is to make a four spaces line, vertical, </p>
+            <img src="assets\images\Captura.PNG" alt="Connect four being played">
+        </section>
+    </main>
 </body>
 
 </html>
