--- a/index.html
+++ b/index.html
@@ -14,9 +14,38 @@
             <p>This is a block of all my best games, from scratch to c++. I wish for you to enjoy them!</p>
         </section>
         <section>
-            <h2>Connect four</h2>
-            <p>Connect four is a two player game in wich your objetive is to make a four spaces line, vertical, </p>
+            <h2>c++ section:</h2>
+        </section>
+        <section>
+            <h3>Connect four</h3>
+            <p>Connect four is a two player game by turns in wich your objetive is
+                to make a four spacesline, vertical, horisontal, or evan diagonal
+            </p>
             <img src="assets\images\Captura.PNG" alt="Connect four being played">
+        </section>
+        <section>
+            <h3>Three in line</h3>
+            <p>Three in line is a two player game by turns in wich your objetive is
+                to make a three spacesline, vertical, horisontal, or evan diagonal
+            </p>
+            <img src="" alt="Three in line being played">
+        </section>
+        <section>
+            <h3>Mayor o menor</h3>
+            <p>These time, my project isn't a game, this is how it works: you enter three random numbers in
+                the computer, and then, it should appear first the smallest number, and then, biggest number.
+            </p>
+            <img src="" alt="Mayor o menor being used">
+        </section>
+        <section>
+            <h3>The alpinist</h3>
+            <p>The alpinist (El alpinista) is a game that was originaly written in Argentina, so everything will be
+                written in spanish. The game is like these: You are a mountaineer and you got lost climbing a mountain,
+                there will be presented two or three options and you wil lneed to chose the right one to survive...
+                <img src="" alt="The alpinist first option">
+        </section>
+        <section>
+            <h2>Scratch section:</h2>
         </section>
     </main>
 </body>
