--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+    <header>
+        <nav><a href="#alpinist">alpinist</a></nav>
+    </header>
     <main>
         <section>
             <h1>Presenting... Nure's games!</h1>
@@ -38,11 +41,12 @@
             <img src="" alt="Mayor o menor being used">
         </section>
         <section>
-            <h3>The alpinist</h3>
+            <h3 id="alpinist">The alpinist</h3>
             <p>The alpinist (El alpinista) is a game that was originaly written in Argentina, so everything will be
                 written in spanish. The game is like these: You are a mountaineer and you got lost climbing a mountain,
                 there will be presented two or three options and you wil lneed to chose the right one to survive...
-                <img src="" alt="The alpinist first option">
+            </p>
+            <img src="" alt="The alpinist first option">
         </section>
         <section>
             <h2>Scratch section:</h2>
