--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
 <body>
     <header>
-        <nav><a href="#alpinist">alpinist</a></nav>
+        <nav>
+            <a href="index.html"><img src="assets\images\logo.jpg" alt=""></a>
+            <a href="#alpinist">alpinist</a>
+        </nav>
     </header>
     <main>
         <section>
