--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
             <p>Connect four is a two player game by turns in wich your objetive is
                 to make a four spacesline, vertical, horisontal, or evan diagonal
             </p>
-            <img src="assets\images\Captura.PNG" alt="Connect four being played">
+            <img src="assets\images\4linea.png" alt="Connect four being played">
         </section>
         <section>
             <h3>Three in line</h3>
             <p>Three in line is a two player game by turns in wich your objetive is
                 to make a three spacesline, vertical, horisontal, or evan diagonal
             </p>
-            <img src="" alt="Three in line being played">
+            <img src="assets\images\tateti.png" alt="Three in line being played">
         </section>
         <section>
             <h3>Mayor o menor</h3>
             <p>These time, my project isn't a game, this is how it works: you enter three random numbers in
-                the computer, and then, it should appear first the smallest number, and then, biggest number.
+                the computer, and then, it should appear first the smallest number, and then, biggest one.
             </p>
-            <img src="" alt="Mayor o menor being used">
+            <img src="assets\images\mayor.png" alt="Mayor o menor being used">
         </section>
         <section>
             <h3 id="alpinist">The alpinist</h3>
@@ -66,7 +66,7 @@
                 written in spanish. The game is like these: You are a mountaineer and you got lost climbing a mountain,
                 there will be presented two or three options and you wil lneed to chose the right one to survive...
             </p>
-            <img src="" alt="The alpinist first option">
+            <img src="assets\images\alpinista.png" alt="The alpinist first option">
         </section>
         <section>
             <h2>Scratch section:</h2>
