--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="assets\favicon\ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="assets\css\style.css">
 </head>
 
-<body>
+<body class="b-colour1">
     <header>
         <nav>
             <a href="index.html"><img src="assets\images\logo.jpg" alt=""></a>
