--- a/index.html
+++ b/index.html
@@ -22,14 +22,42 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="assets\favicon\ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="assets\css\style.css">
 </head>
 
-<body class="b-colour1">
+<body class="bg-primary">
     <header>
-        <nav>
-            <a href="index.html"><img src="assets\images\logo.jpg" alt=""></a>
-            <a href="#alpinist">alpinist</a>
+        <nav class="navbar bg-light bg-primary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html"><img id="logo" src="assets\images\logo.jpg" alt="logo image">
+                    <class="navbar-brand" href="#">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#Connect four">alpinist</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#Three in line">Features</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#Mayor o menor">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#alpinist">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled">Disabled</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
@@ -41,21 +69,21 @@
             <h2>c++ section:</h2>
         </section>
         <section>
-            <h3>Connect four</h3>
+            <h3 id="Connect four">Connect four</h3>
             <p>Connect four is a two player game by turns in wich your objetive is
                 to make a four spacesline, vertical, horisontal, or evan diagonal
             </p>
             <img src="assets\images\4linea.png" alt="Connect four being played">
         </section>
         <section>
-            <h3>Three in line</h3>
+            <h3 id="Three in line">Three in line</h3>
             <p>Three in line is a two player game by turns in wich your objetive is
                 to make a three spacesline, vertical, horisontal, or evan diagonal
             </p>
             <img src="assets\images\tateti.png" alt="Three in line being played">
         </section>
         <section>
-            <h3>Mayor o menor</h3>
+            <h3 id="Mayor o menor">Mayor o menor</h3>
             <p>These time, my project isn't a game, this is how it works: you enter three random numbers in
                 the computer, and then, it should appear first the smallest number, and then, biggest one.
             </p>
@@ -73,6 +101,9 @@
             <h2>Scratch section:</h2>
         </section>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
