--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                             <a class="nav-link" href="#alpinist">Pricing</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="#Laberinth">Pricing</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link disabled">Disabled</a>
                         </li>
                     </ul>
@@ -88,6 +91,35 @@
                 the computer, and then, it should appear first the smallest number, and then, biggest one.
             </p>
             <img src="assets\images\mayor.png" alt="Mayor o menor being used">
+        </section>
+        <section>
+            <h3 id="Laberinth">Laberinth</h3>
+            <p>These project, is my best game, this is how it works: you copy one of the following codes:
+                1)
+                0000001000
+                1011100010
+                0010111110
+                0110010000
+                0000110111
+                0110010000
+                0011011010
+                1001001011
+                0011101010
+                0110001000
+                2)
+                0010000011
+                1010101001
+                0000101101
+                0110100100
+                0100110110
+                1110010011
+                0000111000
+                0101101111
+                0100001000
+                0101000010
+                And then paste them into the game.
+            </p>
+            <img src="assets\images\img laberinto.PNG" alt="laberinth being used">
         </section>
         <section>
             <h3 id="alpinist">The alpinist</h3>
