--- a/index.html
+++ b/index.html
@@ -41,22 +41,19 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#Connect four">alpinist</a>
+                            <a class="nav-link active" aria-current="page" href="#connect-four">Connect four</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#Three in line">Features</a>
+                            <a class="nav-link" href="#three-in-line">Three in line</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#Mayor o menor">Pricing</a>
+                            <a class="nav-link" href="#mayor-o-menor">Mayor o menor</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#alpinist">Pricing</a>
+                            <a class="nav-link" href="#laberinth">Laberinth</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#Laberinth">Pricing</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled">Disabled</a>
+                            <a class="nav-link" href="#alpinist">The alpinist</a>
                         </li>
                     </ul>
                 </div>
@@ -65,60 +62,60 @@
     </header>
     <main>
         <section>
-            <h1>Presenting... Nure's games!</h1>
+            <h1 class="cool-letter">Presenting... Nure's games!</h1>
             <p>This is a block of all my best games, from scratch to c++. I wish for you to enjoy them!</p>
         </section>
         <section>
-            <h2>c++ section:</h2>
+            <h2 class="cool-letter">c++ section:</h2>
         </section>
         <section>
-            <h3 id="Connect four">Connect four</h3>
+            <h3 id="connect-four">Connect four</h3>
             <p>Connect four is a two player game by turns in wich your objetive is
                 to make a four spacesline, vertical, horisontal, or evan diagonal
             </p>
             <img src="assets\images\4linea.png" alt="Connect four being played">
         </section>
         <section>
-            <h3 id="Three in line">Three in line</h3>
+            <h3 id="three-in-line">Three in line</h3>
             <p>Three in line is a two player game by turns in wich your objetive is
                 to make a three spacesline, vertical, horisontal, or evan diagonal
             </p>
             <img src="assets\images\tateti.png" alt="Three in line being played">
         </section>
         <section>
-            <h3 id="Mayor o menor">Mayor o menor</h3>
+            <h3 id="mayor-o-menor">Mayor o menor</h3>
             <p>These time, my project isn't a game, this is how it works: you enter three random numbers in
                 the computer, and then, it should appear first the smallest number, and then, biggest one.
             </p>
             <img src="assets\images\mayor.png" alt="Mayor o menor being used">
         </section>
         <section>
-            <h3 id="Laberinth">Laberinth</h3>
-            <p>These project, is my best game, this is how it works: you copy one of the following codes:
-                1)
-                0000001000
-                1011100010
-                0010111110
-                0110010000
-                0000110111
-                0110010000
-                0011011010
-                1001001011
-                0011101010
-                0110001000
-                2)
-                0010000011
-                1010101001
-                0000101101
-                0110100100
-                0100110110
-                1110010011
-                0000111000
-                0101101111
-                0100001000
-                0101000010
+            <h3 id="laberinth">Laberinth</h3>
+            <p>These project, is my best game, this is how it works: you copy one of the following codes:<br>
+                1)<br>
+                0000001000<br>
+                1011100010<br>
+                0010111110<br>
+                0110010000<br>
+                0000110111<br>
+                0110010000<br>
+                0011011010<br>
+                1001001011<br>
+                0011101010<br>
+                0110001000<br>
+                2)<br>
+                0010000011<br>
+                1010101001<br>
+                0000101101<br>
+                0110100100<br>
+                0100110110<br>
+                1110010011<br>
+                0000111000<br>
+                0101101111<br>
+                0100001000<br>
+                0101000010<br>
                 And then paste them into the game.
-            </p>
+            </p><br>
             <img src="assets\images\img laberinto.PNG" alt="laberinth being used">
         </section>
         <section>
@@ -130,7 +127,7 @@
             <img src="assets\images\alpinista.png" alt="The alpinist first option">
         </section>
         <section>
-            <h2>Scratch section:</h2>
+            <h2 class="cool-letter">Scratch section:</h2>
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
