--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <link rel="stylesheet" href="assets\css\style.css">
 </head>
 
-<body class="bg-primary">
+<body class="bg-image bg-primary">
     <header>
-        <nav class="navbar bg-light bg-primary">
+        <nav class=" navbar bg-light bg-primary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html"><img id="logo" src="assets\images\logo.jpg" alt="logo image">
                     <class="navbar-brand" href="#">
@@ -55,6 +55,12 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#alpinist">The alpinist</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#the_final_exam">The final exam</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#the_ninja">The ninja</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -70,21 +76,21 @@
         </section>
         <section>
             <h3 id="connect-four">Connect four</h3>
-            <p>Connect four is a two player game by turns in wich your objetive is
+            <p>Connect four is a two player game by turns in wich your objetive is<br>
                 to make a four spacesline, vertical, horisontal, or evan diagonal
             </p>
             <img src="assets\images\4linea.png" alt="Connect four being played">
         </section>
         <section>
             <h3 id="three-in-line">Three in line</h3>
-            <p>Three in line is a two player game by turns in wich your objetive is
+            <p>Three in line is a two player game by turns in wich your objetive is<br>
                 to make a three spacesline, vertical, horisontal, or evan diagonal
             </p>
             <img src="assets\images\tateti.png" alt="Three in line being played">
         </section>
         <section>
             <h3 id="mayor-o-menor">Mayor o menor</h3>
-            <p>These time, my project isn't a game, this is how it works: you enter three random numbers in
+            <p>These time, my project isn't a game, this is how it works: you enter three random numbers in<br>
                 the computer, and then, it should appear first the smallest number, and then, biggest one.
             </p>
             <img src="assets\images\mayor.png" alt="Mayor o menor being used">
@@ -115,19 +121,32 @@
                 0100001000<br>
                 0101000010<br>
                 And then paste them into the game.
-            </p><br>
+            </p>
             <img src="assets\images\img laberinto.PNG" alt="laberinth being used">
         </section>
         <section>
             <h3 id="alpinist">The alpinist</h3>
-            <p>The alpinist (El alpinista) is a game that was originaly written in Argentina, so everything will be
-                written in spanish. The game is like these: You are a mountaineer and you got lost climbing a mountain,
+            <p>The alpinist (El alpinista) is a game that was originaly written in Argentina, so everything will be<br>
+                written in spanish. The game is like these: You are a mountaineer and you got lost climbing a
+                mountain,<br>
                 there will be presented two or three options and you wil lneed to chose the right one to survive...
             </p>
             <img src="assets\images\alpinista.png" alt="The alpinist first option">
         </section>
         <section>
-            <h2 class="cool-letter">Scratch section:</h2>
+            <h2>Scratch section:</h2>
+        </section>
+        <section>
+            <h3 id="the_final_exam">The final exam</h3>
+            <p>
+            </p>
+            <img src="" alt="The final exam being played">
+        </section>
+        <section>
+            <h3 id="the_ninja">The ninja</h3>
+            <p>
+            </p>
+            <img src="" alt="Ninja fighting boss">
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
