added scratch images

--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@
             <h3 id="the_final_exam">The final exam</h3>
             <p>
             </p>
-            <img src="" alt="The final exam being played">
+            <img src="assets\images\Captura examen.PNG" alt="The final exam being played">
         </section>
         <section>
             <h3 id="the_ninja">The ninja</h3>
             <p>
             </p>
-            <img src="" alt="Ninja fighting boss">
+            <img src="assets\images\Captura ninja.PNG" alt="Ninja fighting boss">
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
