--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="assets\css\style.css">
 </head>
 
-<body class="bg-image bg-primary">
+<body class="bg-image bg-primary container">
     <header>
         <nav class=" navbar bg-light bg-primary">
             <div class="container-fluid">
