added the hardest game ever

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <body class="bg-image bg-primary container">
     <header>
-        <nav class=" navbar bg-light bg-primary">
+        <nav class="navbar bg-light bg-primary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html"><img id="logo" src="assets\images\logo.jpg" alt="logo image">
                     <class="navbar-brand" href="#">
@@ -60,6 +60,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#the_ninja">The ninja</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#the_hardest_game_ever">The hardest game ever</a>
                         </li>
                     </ul>
                 </div>
@@ -97,30 +100,8 @@
         </section>
         <section>
             <h3 id="laberinth">Laberinth</h3>
-            <p>These project, is my best game, this is how it works: you copy one of the following codes:<br>
-                1)<br>
-                0000001000<br>
-                1011100010<br>
-                0010111110<br>
-                0110010000<br>
-                0000110111<br>
-                0110010000<br>
-                0011011010<br>
-                1001001011<br>
-                0011101010<br>
-                0110001000<br>
-                2)<br>
-                0010000011<br>
-                1010101001<br>
-                0000101101<br>
-                0110100100<br>
-                0100110110<br>
-                1110010011<br>
-                0000111000<br>
-                0101101111<br>
-                0100001000<br>
-                0101000010<br>
-                And then paste them into the game.
+            <p>These project, is my best game, this is how it works: you enter one of thise keys: a(left) - s(down) -
+                w(up) - d(right) to move. Your objetibe is to get to the right-down corner.
             </p>
             <img src="assets\images\img laberinto.PNG" alt="laberinth being used">
         </section>
@@ -138,15 +119,23 @@
         </section>
         <section>
             <h3 id="the_final_exam">The final exam</h3>
-            <p>
+            <p>You can play the final exam by moving with the arrows the Little Red Square.Your objective<br>
+                is to get to the Green Space to pass the game. Don't forget to get the key before and never touch blue!
             </p>
             <img src="assets\images\Captura examen.PNG" alt="The final exam being played">
         </section>
         <section>
             <h3 id="the_ninja">The ninja</h3>
-            <p>
+            <p>This game has already got the instructions on it!
             </p>
             <img src="assets\images\Captura ninja.PNG" alt="Ninja fighting boss">
+        </section>
+        <section>
+            <h3 id="the_hardest_game_ever">The hardest game ever</h3>
+            <p>You can play The hardest game ever by moving with the arrows the Little Red Square.Your objective<br>
+                is to get to the Green Space to pass to the next level. Never touch blue!
+            </p>
+            <img src="assets\images\scratch.PNG" alt="The hardest game ever being played(last level)">
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
