started new page

--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
 
 <body class="bg-image bg-primary container">
     <header>
-        <nav class="navbar bg-light bg-primary">
+        <nav class="navbar navbar-expand-lg g-light bg-primary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html"><img id="logo" src="assets\images\logo.jpg" alt="logo image">
-                    <class="navbar-brand" href="#">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,10 +68,42 @@
             </div>
         </nav>
     </header>
+
     <main>
         <section>
             <h1 class="cool-letter">Presenting... Nure's games!</h1>
             <p>This is a block of all my best games, from scratch to c++. I wish for you to enjoy them!</p>
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active max-height overflow-hidden">
+                        <img src="assets\images\CSS.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item max-height overflow-hidden">
+                        <img src="assets\images\maxresdefault.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item max-height overflow-hidden">
+                        <img src="assets\images\html.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
         </section>
         <section>
             <h2 class="cool-letter">c++ section:</h2>
@@ -82,28 +113,28 @@
             <p>Connect four is a two player game by turns in wich your objetive is<br>
                 to make a four spacesline, vertical, horisontal, or evan diagonal
             </p>
-            <img src="assets\images\4linea.png" alt="Connect four being played">
+            <img class="img-fluid" src="assets\images\4linea.png" alt="Connect four being played">
         </section>
         <section>
             <h3 id="three-in-line">Three in line</h3>
             <p>Three in line is a two player game by turns in wich your objetive is<br>
                 to make a three spacesline, vertical, horisontal, or evan diagonal
             </p>
-            <img src="assets\images\tateti.png" alt="Three in line being played">
+            <img class="img-fluid" src="assets\images\tateti.png" alt="Three in line being played">
         </section>
         <section>
             <h3 id="mayor-o-menor">Mayor o menor</h3>
             <p>These time, my project isn't a game, this is how it works: you enter three random numbers in<br>
                 the computer, and then, it should appear first the smallest number, and then, biggest one.
             </p>
-            <img src="assets\images\mayor.png" alt="Mayor o menor being used">
+            <img class="img-fluid" src="assets\images\mayor.png" alt="Mayor o menor being used">
         </section>
         <section>
             <h3 id="laberinth">Laberinth</h3>
-            <p>These project, is my best game, this is how it works: you enter one of thise keys: a(left) - s(down) -
-                w(up) - d(right) to move. Your objetibe is to get to the right-down corner.
+            <p>These project, is my best game, this is how it works: you enter one of thise keys: a(left)<br>
+                - s(down) - w(up) - d(right) to move. Your objetibe is to get to the right-down corner.
             </p>
-            <img src="assets\images\img laberinto.PNG" alt="laberinth being used">
+            <img class="img-fluid" src="assets\images\img laberinto.PNG" alt="laberinth being used">
         </section>
         <section>
             <h3 id="alpinist">The alpinist</h3>
@@ -112,7 +143,7 @@
                 mountain,<br>
                 there will be presented two or three options and you wil lneed to chose the right one to survive...
             </p>
-            <img src="assets\images\alpinista.png" alt="The alpinist first option">
+            <img class="img-fluid" src="assets\images\alpinista.png" alt="The alpinist first option">
         </section>
         <section>
             <h2>Scratch section:</h2>
@@ -122,20 +153,20 @@
             <p>You can play the final exam by moving with the arrows the Little Red Square.Your objective<br>
                 is to get to the Green Space to pass the game. Don't forget to get the key before and never touch blue!
             </p>
-            <img src="assets\images\Captura examen.PNG" alt="The final exam being played">
+            <img class="img-fluid" src="assets\images\Captura examen.PNG" alt="The final exam being played">
         </section>
         <section>
             <h3 id="the_ninja">The ninja</h3>
             <p>This game has already got the instructions on it!
             </p>
-            <img src="assets\images\Captura ninja.PNG" alt="Ninja fighting boss">
+            <img class="img-fluid" src="assets\images\Captura ninja.PNG" alt="Ninja fighting boss">
         </section>
         <section>
             <h3 id="the_hardest_game_ever">The hardest game ever</h3>
             <p>You can play The hardest game ever by moving with the arrows the Little Red Square.Your objective<br>
                 is to get to the Green Space to pass to the next level. Never touch blue!
             </p>
-            <img src="assets\images\scratch.PNG" alt="The hardest game ever being played(last level)">
+            <img class="img-fluid" src="assets\images\scratch.PNG" alt="The hardest game ever being played(last level)">
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
