--- a/games.html
+++ b/games.html
@@ -40,7 +40,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#connect-four">Connect four</a>
+                            <a class="nav-link" href="about.html">About me</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#connect-four">Connect four</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#three-in-line">Three in line</a>
@@ -62,6 +65,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#the_hardest_game_ever">The hardest game ever</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#ahorcado">Hanged Han</a>
                         </li>
                     </ul>
                 </div>
@@ -167,6 +173,12 @@
                 is to get to the Green Space to pass to the next level. Never touch blue!
             </p>
             <img class="img-fluid" src="assets\images\scratch.PNG" alt="The hardest game ever being played(last level)">
+        </section>
+        <section>
+            <h3 id="ahorcado">Hanged Man</h3>
+            <p>You can play Ahorcado by enterin.Your objective is
+            </p>
+            <img class="img-fluid" src="" alt="you died">
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
