--- a/games.html
+++ b/games.html
@@ -176,9 +176,11 @@
         </section>
         <section>
             <h3 id="ahorcado">Hanged Man</h3>
-            <p>You can play Ahorcado by enterin.Your objective is
+            <p>You can play Ahorcado by entering ltters, if you enter the right ones, <br>
+                you will see the hidden word. Your objective is to find it.
             </p>
-            <img class="img-fluid" src="" alt="you died">
+            <img class="img-fluid" src="assets\images\ahorcado1234.PNG" alt="you died">
+            <img class="img-fluid" src="assets\images\ahorcado1234567.PNG" alt="you died"><br>
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
