--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
         <img class="img-fluid, max-width" src="assets\images\20231013_161239.jpg" alt="me">
         <p>
             Hi, mi name is Nuredin Mihran Mamprelian. I live in C.A.B.A., Buenos Aires, Argentina and I am 12 years.<br>
-            My
+            Also, my favorite food is gnocchi and the color I most like is yellow.
         </p>
     </section>
 </body>
