--- a/games.html
+++ b/games.html
@@ -180,7 +180,7 @@
                 you will see the hidden word. Your objective is to find it.
             </p>
             <img class="img-fluid" src="assets\images\ahorcado1234.PNG" alt="you died">
-            <img class="img-fluid" src="assets\images\ahorcado1234567.PNG" alt="you died"><br>
+            <img class="img-fluid" src="assets\images\ahorcado1234567.PNG" alt="you died">
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
