--- a/scratch.html
+++ b/scratch.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nure's games!</title>
+    <title>Scratch Games</title>
     <link rel="apple-touch-icon" sizes="57x57" href="assets\favicon\apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="assets\favicon\apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="assets\favicon\apple-icon-72x72.png">
@@ -39,36 +39,16 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html">About me</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#connect-four">Connect four</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#three-in-line">Three in line</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#mayor-o-menor">Mayor o menor</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#laberinth">Laberinth</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#alpinist">The alpinist</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#ahorcado">Hanged Man</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#the_final_exam">The final exam</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#the_ninja">The ninja</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#the_hardest_game_ever">The hardest game ever</a>
-                        </li>
+                        <section>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#the_final_exam">The final exam</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#the_ninja">The ninja</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#the_hardest_game_ever">The hardest game ever</a>
+                            </li>
                     </ul>
                 </div>
             </div>
@@ -114,60 +94,14 @@
         <section>
             <h2 class="cool-letter">c++ section:</h2>
         </section>
-        <section>
-            <h3 id="connect-four">Connect four</h3>
-            <p>Connect four is a two player game by turns in wich your objetive is<br>
-                to make a four spacesline, vertical, horisontal, or evan diagonal
-            </p>
-            <img class="img-fluid" src="assets\images\4linea.png" alt="Connect four being played">
-        </section>
-        <section>
-            <h3 id="three-in-line">Three in line</h3>
-            <p>Three in line is a two player game by turns in wich your objetive is<br>
-                to make a three spacesline, vertical, horisontal, or evan diagonal
-            </p>
-            <img class="img-fluid" src="assets\images\tateti.png" alt="Three in line being played">
-        </section>
-        <section>
-            <h3 id="mayor-o-menor">Mayor o menor</h3>
-            <p>These time, my project isn't a game, this is how it works: you enter three random numbers in<br>
-                the computer, and then, it should appear first the smallest number, and then, biggest one.
-            </p>
-            <img class="img-fluid" src="assets\images\mayor.png" alt="Mayor o menor being used">
-        </section>
-        <section>
-            <h3 id="laberinth">Laberinth</h3>
-            <p>These project, is my best game, this is how it works: you enter one of thise keys: a(left)<br>
-                - s(down) - w(up) - d(right) to move. Your objetibe is to get to the right-down corner.
-            </p>
-            <img class="img-fluid" src="assets\images\img laberinto.PNG" alt="laberinth being used">
-        </section>
-        <section>
-            <h3 id="alpinist">The alpinist</h3>
-            <p>The alpinist (El alpinista) is a game that was originaly written in Argentina, so everything will be<br>
-                written in spanish. The game is like these: You are a mountaineer and you got lost climbing a
-                mountain,<br>
-                there will be presented two or three options and you wil lneed to chose the right one to survive...
-            </p>
-            <img class="img-fluid" src="assets\images\alpinista.png" alt="The alpinist first option">
-        </section>
-        <section>
-            <h3 id="ahorcado">Hanged Man</h3>
-            <p>You can play Ahorcado by entering ltters, if you enter the right ones, <br>
-                you will see the hidden word. Your objective is to find it.
-            </p>
-            <img class="img-fluid" src="assets\images\ahorcado1234.PNG" alt="you died">
-            <img class="img-fluid" src="assets\images\ahorcado1234567.PNG" alt="you died">
-        </section>
-        <section>
-            <h2>Scratch section:</h2>
-        </section>
-        <section>
-            <h3 id="the_final_exam">The final exam</h3>
-            <p>You can play the final exam by moving with the arrows the Little Red Square.Your objective<br>
-                is to get to the Green Space to pass the game. Don't forget to get the key before and never touch blue!
-            </p>
-            <img class="img-fluid" src="assets\images\Captura examen.PNG" alt="The final exam being played">
+
+        <h3 id="the_final_exam">The final exam</h3>
+        <p>You can play the final exam by moving with the arrows the Little Red Square.Your
+            objective<br>
+            is to get to the Green Space to pass the game. Don't forget to get the key before and
+            never touch blue!
+        </p>
+        <img class="img-fluid" src="assets\images\Captura examen.PNG" alt="The final exam being played">
         </section>
         <section>
             <h3 id="the_ninja">The ninja</h3>
@@ -177,15 +111,13 @@
         </section>
         <section>
             <h3 id="the_hardest_game_ever">The hardest game ever</h3>
-            <p>You can play The hardest game ever by moving with the arrows the Little Red Square.Your objective<br>
+            <p>You can play The hardest game ever by moving with the arrows the Little Red Square.Your
+                objective<br>
                 is to get to the Green Space to pass to the next level. Never touch blue!
             </p>
             <img class="img-fluid" src="assets\images\scratch.PNG" alt="The hardest game ever being played(last level)">
         </section>
-    </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
