--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="games.html">Nure's games!</a>
+                        <a class="nav-link active" href="index.html">Nure's games!</a>
                     </li>
                 </ul>
             </div>
