--- a/scratch.html
+++ b/scratch.html
@@ -39,16 +39,15 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <section>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#the_final_exam">The final exam</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#the_ninja">The ninja</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#the_hardest_game_ever">The hardest game ever</a>
-                            </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#the_final_exam">The final exam</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#the_ninja">The ninja</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#the_hardest_game_ever">The hardest game ever</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -92,7 +91,7 @@
             </div>
         </section>
         <section>
-            <h2 class="cool-letter">c++ section:</h2>
+            <h2 class="cool-letter">Scratch section:</h2>
         </section>
 
         <h3 id="the_final_exam">The final exam</h3>
@@ -117,7 +116,9 @@
             </p>
             <img class="img-fluid" src="assets\images\scratch.PNG" alt="The hardest game ever being played(last level)">
         </section>
-
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
