--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
+                            <a class="nav-link" href="scratch.html">Scratch Games</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="about.html">About me</a>
                         </li>
                         <li class="nav-item">
@@ -59,15 +62,6 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#ahorcado">Hanged Man</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#the_final_exam">The final exam</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#the_ninja">The ninja</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#the_hardest_game_ever">The hardest game ever</a>
                         </li>
                     </ul>
                 </div>
@@ -113,8 +107,6 @@
         </section>
         <section>
             <h2 class="cool-letter">c++ section:</h2>
-        </section>
-        <section>
             <h3 id="connect-four">Connect four</h3>
             <p>Connect four is a two player game by turns in wich your objetive is<br>
                 to make a four spacesline, vertical, horisontal, or evan diagonal
@@ -158,29 +150,6 @@
             </p>
             <img class="img-fluid" src="assets\images\ahorcado1234.PNG" alt="you died">
             <img class="img-fluid" src="assets\images\ahorcado1234567.PNG" alt="you died">
-        </section>
-        <section>
-            <h2>Scratch section:</h2>
-        </section>
-        <section>
-            <h3 id="the_final_exam">The final exam</h3>
-            <p>You can play the final exam by moving with the arrows the Little Red Square.Your objective<br>
-                is to get to the Green Space to pass the game. Don't forget to get the key before and never touch blue!
-            </p>
-            <img class="img-fluid" src="assets\images\Captura examen.PNG" alt="The final exam being played">
-        </section>
-        <section>
-            <h3 id="the_ninja">The ninja</h3>
-            <p>This game has already got the instructions on it!
-            </p>
-            <img class="img-fluid" src="assets\images\Captura ninja.PNG" alt="Ninja fighting boss">
-        </section>
-        <section>
-            <h3 id="the_hardest_game_ever">The hardest game ever</h3>
-            <p>You can play The hardest game ever by moving with the arrows the Little Red Square.Your objective<br>
-                is to get to the Green Space to pass to the next level. Never touch blue!
-            </p>
-            <img class="img-fluid" src="assets\images\scratch.PNG" alt="The hardest game ever being played(last level)">
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
