--- a/about.html
+++ b/about.html
@@ -41,6 +41,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="index.html">Nure's games!</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="scratch.html">Scratch Games</a>
+                    </li>
                 </ul>
             </div>
         </div>
