--- a/scratch.html
+++ b/scratch.html
@@ -40,6 +40,12 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
+                            <a class="nav-link" href="index.html">Home Page</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">About me</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#the_final_exam">The final exam</a>
                         </li>
                         <li class="nav-item">
@@ -91,7 +97,7 @@
             </div>
         </section>
         <section>
-            <h2 class="cool-letter">Scratch section:</h2>
+            <h2 class="cool-letter">Scratch Games</h2>
         </section>
 
         <h3 id="the_final_exam">The final exam</h3>
