--- a/index.html
+++ b/index.html
@@ -106,50 +106,117 @@
             </div>
         </section>
         <section>
-            <h2 class="cool-letter">c++ section:</h2>
-            <h3 id="connect-four">Connect four</h3>
-            <p>Connect four is a two player game by turns in wich your objetive is<br>
-                to make a four spacesline, vertical, horisontal, or evan diagonal
-            </p>
-            <img class="img-fluid" src="assets\images\4linea.png" alt="Connect four being played">
+            <div class="row">
+                <div class="col">
+                    <h2 class="cool-letter">c++ section:</h2>
+                    <h3 id="connect-four">Connect four</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <img class="img-fluid" src="assets\images\4linea.png" alt="Connect four being played">
+                </div>
+                <div class="col">
+                    <p>Connect four is a two player game by turns in wich your objetive is<br>
+                        to make a four spacesline, vertical, horisontal, or evan diagonal
+                    </p>
+                </div>
+            </div>
         </section>
         <section>
-            <h3 id="three-in-line">Three in line</h3>
-            <p>Three in line is a two player game by turns in wich your objetive is<br>
-                to make a three spacesline, vertical, horisontal, or evan diagonal
-            </p>
-            <img class="img-fluid" src="assets\images\tateti.png" alt="Three in line being played">
+            <div class="row">
+                <div class="col">
+                    <h3 id="three-in-line">Three in line</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <img class="img-fluid" src="assets\images\tateti.png" alt="Three in line being played">
+                </div>
+                <div class="col">
+                    <p>Three in line is a two player game by turns in wich your objetive is<br>
+                        to make a three spacesline, vertical, horisontal, or evan diagonal
+                    </p>
+                </div>
+            </div>
         </section>
         <section>
-            <h3 id="mayor-o-menor">Mayor o menor</h3>
-            <p>These time, my project isn't a game, this is how it works: you enter three random numbers in<br>
-                the computer, and then, it should appear first the smallest number, and then, biggest one.
-            </p>
-            <img class="img-fluid" src="assets\images\mayor.png" alt="Mayor o menor being used">
+
+            <div class="row">
+                <div class="col">
+                    <h3 id="mayor-o-menor">Mayor o menor</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <img class="img-fluid" src="assets\images\mayor.png" alt="Mayor o menor being used">
+                </div>
+                <div class="col">
+                    <p>These time, my project isn't a game, this is how it works: you enter three random numbers
+                        in<br>
+                        the computer, and then, it should appear first the smallest number, and then, biggest
+                        one.
+                    </p>
+                </div>
+            </div>
+
         </section>
         <section>
-            <h3 id="laberinth">Laberinth</h3>
-            <p>These project, is my best game, this is how it works: you enter one of thise keys: a(left)<br>
-                - s(down) - w(up) - d(right) to move. Your objetibe is to get to the right-down corner.
-            </p>
-            <img class="img-fluid" src="assets\images\img laberinto.PNG" alt="laberinth being used">
+            <div class="row">
+                <div class="col">
+                    <h3 id="laberinth">Laberinth</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <img class="img-fluid" src="assets\images\img laberinto.PNG" alt="laberinth being used">
+                </div>
+                <div class="col">
+                    <p>These project, is my best game, this is how it works: you enter one of thise keys:
+                        a(left)<br>
+                        - s(down) - w(up) - d(right) to move. Your objetibe is to get to the right-down corner.
+                    </p>
+                </div>
+            </div>
         </section>
         <section>
-            <h3 id="alpinist">The alpinist</h3>
-            <p>The alpinist (El alpinista) is a game that was originaly written in Argentina, so everything will be<br>
-                written in spanish. The game is like these: You are a mountaineer and you got lost climbing a
-                mountain,<br>
-                there will be presented two or three options and you wil lneed to chose the right one to survive...
-            </p>
-            <img class="img-fluid" src="assets\images\alpinista.png" alt="The alpinist first option">
+            <div class="row">
+                <div class="col">
+                    <h3 id="alpinist">The alpinist</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <img class="img-fluid" src="assets\images\alpinista.png" alt="The alpinist first option">
+                </div>
+                <div class="col">
+                    <p>The alpinist (El alpinista) is a game that was originaly written in Argentina, so everything will
+                        be<br>
+                        written in spanish. The game is like these: You are a mountaineer and you got lost climbing a
+                        mountain,<br>
+                        there will be presented two or three options and you wil lneed to chose the right one to
+                        survive...
+                    </p>
+                </div>
+            </div>
         </section>
         <section>
-            <h3 id="ahorcado">Hanged Man</h3>
-            <p>You can play Ahorcado by entering ltters, if you enter the right ones, <br>
-                you will see the hidden word. Your objective is to find it.
-            </p>
-            <img class="img-fluid" src="assets\images\ahorcado1234.PNG" alt="you died">
-            <img class="img-fluid" src="assets\images\ahorcado1234567.PNG" alt="you died">
+            <div class="row">
+                <div class="col">
+                    <h3 id="ahorcado">Hanged Man</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <img class="img-fluid" src="assets\images\ahorcado1234.PNG" alt="you died">
+                    <img class="img-fluid" src="assets\images\ahorcado1234567.PNG" alt="you died">
+                </div>
+                <div class="col">
+                    <p>You can play Ahorcado by entering ltters, if you enter the right ones, <br>
+                        you will see the hidden word. Your objective is to find it.
+                    </p>
+                </div>
+            </div>
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
