--- a/index.html
+++ b/index.html
@@ -107,16 +107,16 @@
         </section>
         <section>
             <div class="row">
-                <div class="col">
+                <div class="col-auto">
                     <h2 class="cool-letter">c++ section:</h2>
                     <h3 id="connect-four">Connect four</h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col-auto col-md-3">
                     <img class="img-fluid" src="assets\images\4linea.png" alt="Connect four being played">
                 </div>
-                <div class="col">
+                <div class="col-auto col-md-9">
                     <p>Connect four is a two player game by turns in wich your objetive is<br>
                         to make a four spacesline, vertical, horisontal, or evan diagonal
                     </p>
@@ -125,15 +125,15 @@
         </section>
         <section>
             <div class="row">
-                <div class="col">
+                <div class="col-auto">
                     <h3 id="three-in-line">Three in line</h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col-auto col-md-3">
                     <img class="img-fluid" src="assets\images\tateti.png" alt="Three in line being played">
                 </div>
-                <div class="col">
+                <div class="col-auto col-md-9">
                     <p>Three in line is a two player game by turns in wich your objetive is<br>
                         to make a three spacesline, vertical, horisontal, or evan diagonal
                     </p>
@@ -143,15 +143,15 @@
         <section>
 
             <div class="row">
-                <div class="col">
+                <div class="col-auto">
                     <h3 id="mayor-o-menor">Mayor o menor</h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col-auto col-md-3">
                     <img class="img-fluid" src="assets\images\mayor.png" alt="Mayor o menor being used">
                 </div>
-                <div class="col">
+                <div class="col-auto col-md-9">
                     <p>These time, my project isn't a game, this is how it works: you enter three random numbers
                         in<br>
                         the computer, and then, it should appear first the smallest number, and then, biggest
@@ -163,15 +163,15 @@
         </section>
         <section>
             <div class="row">
-                <div class="col">
+                <div class="col-auto">
                     <h3 id="laberinth">Laberinth</h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col-auto col-md-3">
                     <img class="img-fluid" src="assets\images\img laberinto.PNG" alt="laberinth being used">
                 </div>
-                <div class="col">
+                <div class="col-auto col-md-9">
                     <p>These project, is my best game, this is how it works: you enter one of thise keys:
                         a(left)<br>
                         - s(down) - w(up) - d(right) to move. Your objetibe is to get to the right-down corner.
@@ -181,15 +181,15 @@
         </section>
         <section>
             <div class="row">
-                <div class="col">
+                <div class="col-auto">
                     <h3 id="alpinist">The alpinist</h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col-auto col-md-3">
                     <img class="img-fluid" src="assets\images\alpinista.png" alt="The alpinist first option">
                 </div>
-                <div class="col">
+                <div class="col-auto col-md-9">
                     <p>The alpinist (El alpinista) is a game that was originaly written in Argentina, so everything will
                         be<br>
                         written in spanish. The game is like these: You are a mountaineer and you got lost climbing a
@@ -202,16 +202,16 @@
         </section>
         <section>
             <div class="row">
-                <div class="col">
+                <div class="col-auto">
                     <h3 id="ahorcado">Hanged Man</h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col-auto col-md-3">
                     <img class="img-fluid" src="assets\images\ahorcado1234.PNG" alt="you died">
                     <img class="img-fluid" src="assets\images\ahorcado1234567.PNG" alt="you died">
                 </div>
-                <div class="col">
+                <div class="col-auto col-md-9">
                     <p>You can play Ahorcado by entering ltters, if you enter the right ones, <br>
                         you will see the hidden word. Your objective is to find it.
                     </p>
