--- a/scratch.html
+++ b/scratch.html
@@ -63,7 +63,7 @@
     <main>
         <section>
             <h1 class="cool-letter">Presenting... Nure's games!</h1>
-            <p>This is a block of all my best games, from scratch to c++. I wish for you to enjoy them!</p>
+            <p>This is a block of all my best games of scratch. I wish for you to enjoy them!</p>
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
@@ -99,28 +99,59 @@
         <section>
             <h2 class="cool-letter">Scratch Games</h2>
         </section>
+        <div class="row">
+            <div class="col">
+                <h3 id="the_final_exam">The final exam</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-auto col-md-3">
+                <img class="img-fluid" src="assets\images\Captura examen.PNG" alt="The final exam being played">
+            </div>
+            <div class="col-auto col-md-9">
+                <p>You can play the final exam by moving with the arrows the Little Red Square.Your
+                    objective<br>
+                    is to get to the Green Space to pass the game. Don't forget to get the key before and
+                    never touch blue!
+                </p>
+            </div>
+        </div>
+        </section>
+        <section>
+            <div class="row">
+                <div class="col">
+                    <h3 id="the_ninja">The ninja</h3>
+                </div>
+            </div>
 
-        <h3 id="the_final_exam">The final exam</h3>
-        <p>You can play the final exam by moving with the arrows the Little Red Square.Your
-            objective<br>
-            is to get to the Green Space to pass the game. Don't forget to get the key before and
-            never touch blue!
-        </p>
-        <img class="img-fluid" src="assets\images\Captura examen.PNG" alt="The final exam being played">
+            <div class="row">
+                <div class="col-auto col-md-3">
+                    <img class="img-fluid" src="assets\images\Captura ninja.PNG" alt="Ninja fighting boss">
+                </div>
+                <div class="col-auto col-md-9">
+                    <p>This game has already got the instructions on it!
+                    </p>
+                </div>
+            </div>
         </section>
         <section>
-            <h3 id="the_ninja">The ninja</h3>
-            <p>This game has already got the instructions on it!
-            </p>
-            <img class="img-fluid" src="assets\images\Captura ninja.PNG" alt="Ninja fighting boss">
-        </section>
-        <section>
-            <h3 id="the_hardest_game_ever">The hardest game ever</h3>
-            <p>You can play The hardest game ever by moving with the arrows the Little Red Square.Your
-                objective<br>
-                is to get to the Green Space to pass to the next level. Never touch blue!
-            </p>
-            <img class="img-fluid" src="assets\images\scratch.PNG" alt="The hardest game ever being played(last level)">
+            <div class="row">
+                <div class="col">
+                    <h3 id="the_hardest_game_ever">The hardest game ever</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-auto col-md-3">
+                    <img class="img-fluid" src="assets\images\scratch.PNG"
+                        alt="The hardest game ever being played(last level)">
+                </div>
+                <div class="col-auto col-md-9">
+                    <p>You can play The hardest game ever by moving with the arrows the Little Red Square.Your
+                        objective<br>
+                        is to get to the Green Space to pass to the next level. Never touch blue!
+                    </p>
+                </div>
+            </div>
         </section>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
