--- a/index.html
+++ b/index.html
@@ -186,10 +186,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-auto col-md-3">
+                <div class="col-auto col-md-9">
                     <img class="img-fluid" src="assets\images\alpinista.png" alt="The alpinist first option">
                 </div>
-                <div class="col-auto col-md-9">
+                <div class="col-auto">
                     <p>The alpinist (El alpinista) is a game that was originaly written in Argentina, so everything will
                         be<br>
                         written in spanish. The game is like these: You are a mountaineer and you got lost climbing a
